# ggcmpy

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
docs/api/: index.md
docs/getting-started-guide/: index.md  installing.md  quick-overview.ipynb  solarwind.ipynb
docs/openggcm/: delbt.md  index.md  quickstart.md
docs/tracing/: boris-integrator.ipynb  dipole.ipynb  index.md  openggcm.ipynb  simple-gyration.ipynb
ggcmpy/: __init__.py  _fortfile_wrapper.py  _jrrle.F90  example.py  fortfile.F90  ggcm_jrrle.py  jrrle_backend.py  openggcm.py  test.F90
ggcmpy/backends/: jrrle.py
ggcmpy/backends/jrrle/: __init__.py  _jrrle.F90  fortran_file.py  jrrle_file.py  util.py
src/ggcmpy/: __init__.py  iono.py  jrrle_array.py  jrrle_backend.py  jrrle_store.py  openggcm.py  plot_cl.py  plot_polar.py  plot_time_series.py  timeseries.py  tracing.py
src/ggcmpy/backends/jrrle/: __init__.py  _fortfile.F90  _jrrle.F90  constants.F90  f2py_interface.F90  fortran_file.py  ground_perturbation.F90  iono_psol.F90  jrrle_file.py  new_cotr.F90  particle_tracing.F90  simple-death.F90  util.py
src/ggcmpy/ggcm_tools/: CDAWeb.py  CDAWebRunInput  CDAWebRunInput.py  __init__.py  amr_tree_tools.py  plotting.py
src/ggcmpy/ggcm_tools/CDAfetch/: __init__.py  f107.py  getData.py  low_level.py  mid_level.py
src/ggcmpy/sample/: coupling0001.iof.000030  coupling0001.iof.000060  test0008.grid  test0008.grid2
src/ggcmpy/sample/cir07_19970227_liang_norcm/: MONITOR  cir07_19970227_liang_norcm.iof.000300  cir07_19970227_liang_norcm.iof.000600  cir07_19970227_liang_norcm.iof.000900  cir07_19970227_liang_norcm.iof.001200  cir07_19970227_liang_norcm.iof.001500  cir07_19970227_liang_norcm.iof.001800  cir07_19970227_liang_norcm.iof.002100  cir07_19970227_liang_norcm.iof.002400  cir07_19970227_liang_norcm.iof.002700  cir07_19970227_liang_norcm.iof.003000  cir07_19970227_liang_norcm.iof.003300  cir07_19970227_liang_norcm.iof.003600  cir07_19970227_liang_norcm.iof.003900  cir07_19970227_liang_norcm.iof.004200  cir07_19970227_liang_norcm.iof.004500  cir07_19970227_liang_norcm.iof.004800  cir07_19970227_liang_norcm.iof.005100  cir07_19970227_liang_norcm.iof.005400  cir07_19970227_liang_norcm.iof.005700  cir07_19970227_liang_norcm.iof.006000  cir07_19970227_liang_norcm.iof.006300  cir07_19970227_liang_norcm.iof.006600  cir07_19970227_liang_norcm.iof.006900  cir07_19970227_liang_norcm.iof.007200  cir07_19970227_liang_norcm.iof.007500  cir07_19970227_liang_norcm.iof.007800  cir07_19970227_liang_norcm.iof.008100  cir07_19970227_liang_norcm.iof.008400  cir07_19970227_liang_norcm.iof.008700  cir07_19970227_liang_norcm.iof.009000  cir07_19970227_liang_norcm.iof.009300  cir07_19970227_liang_norcm.iof.009600  cir07_19970227_liang_norcm.iof.009900  cir07_19970227_liang_norcm.iof.010200  cir07_19970227_liang_norcm.iof.010500  cir07_19970227_liang_norcm.iof.010800  cir07_19970227_liang_norcm.iof.011100  cir07_19970227_liang_norcm.iof.011400  cir07_19970227_liang_norcm.iof.011700
src/ggcmpy/sample/cir07_19970227_liang_norcm/tmp.minvar/: om1997.3  om1997.4  om1997.5  om1997.bl  om1997.bm  om1997.bn  om1997.bxtra  om1997.bxtra0  om1997.bytra  om1997.bytra0  om1997.bztra  om1997.bztra0  om1997.pp  om1997.temp  om1997.vxgse  om1997.vygse  om1997.vygse10  om1997.vzgse10
src/ggcmpy/sample/djl06008/: djl06008.grid  djl06008.py_0.020880
src/ggcmpy/sample/om1997/: om1997.bxgse  om1997.bygse  om1997.bzgse  om1997.nxtra  om1997.nytra  om1997.nztra  om1997.rr  om1997.tt  om1997.vzgse
tests/: conftest.py  test_jrrle.py  test_openggcm.py  test_package.py  test_particle_tracing.py  test_timeseries.py  test_xarray_openggcm.py
