[project]
name = "ggcmpy"
authors = [
  { name = "Kai Germaschewski", email = "kai.germaschewski@gmail.com" },
  { name = "Jimmy Raeder", email = "j.raeder@unh.edu" },
  { name = "Matt Gilson" },
  { name = "Kristofer Maynard" },
]
description = "Python utilities for the OpenGGCM Global Magnetosphere Code"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = ["numpy", "xarray"]

[project.optional-dependencies]
test = ["pytest >=6", "pytest-cov >=3"]
dev = ["pytest >=6", "pytest-cov >=3"]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[project.urls]
Homepage = "https://github.com/unh-hpc/ggcmpy"
"Bug Tracker" = "https://github.com/unh-hpc/ggcmpy/issues"
Discussions = "https://github.com/unh-hpc/ggcmpy/discussions"
Changelog = "https://github.com/unh-hpc/ggcmpy/releases"

[build-system]
requires = ["scikit-build-core>=0.10", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/ggcmpy/_version.py"]

[tool.setuptools_scm]
write_to = "src/ggcmpy/_version.py"

[project.entry-points."xarray.backends"]
jrrle_engine = "ggcmpy.jrrle_backend:JrrleEntrypoint"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.coverage]
run.source = ["xarray_adios2"]
report.exclude_also = ['\.\.\.', 'if typing.TYPE_CHECKING:']

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "xarray_adios2.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.uv]
reinstall-package = ["ggcmpy"]
