[project]
name = "ggcmpy"
authors = [
  { name = "Kai Germaschewski" },
  { name = "Jimmy Raeder" },
  { name = "Matt Gilson" },
  { name = "Kristofer Maynard" },
]
maintainers = [
  { name = "Kai Germaschewski", email = "kai.germaschewski@unh.edu" },
]
description = "Python utilities for the OpenGGCM Global Magnetosphere Code"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
# dask is currently required because open_mfdataset() otherwise fails
dependencies = ["xarray", "typing-extensions", "dask"]

[project.optional-dependencies]
test = ["pytest >=6", "pytest-cov >=3", "xarray-adios2"]
dev = ["pytest >=6", "pytest-cov >=3", "xarray-adios2", "nox", "pre-commit"]
adios2 = ["xarray-adios2"]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  # "furo>=2023.08.17",
  "nbsphinx>=0.9",
  "xarray",
  "ipykernel",
  "matplotlib",
  "sphinx-book-theme",
]

[project.urls]
Homepage = "https://github.com/unh-hpc/ggcmpy"
"Bug Tracker" = "https://github.com/unh-hpc/ggcmpy/issues"
Discussions = "https://github.com/unh-hpc/ggcmpy/discussions"
Changelog = "https://github.com/unh-hpc/ggcmpy/releases"

[build-system]
requires = ["scikit-build-core>=0.10", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/ggcmpy/_version.py"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
archs = ["auto64"]
skip = ["pp310-manylinux_i686", "pp310-macosx_arm64"]

[tool.setuptools_scm]
write_to = "src/ggcmpy/_version.py"

[project.entry-points."xarray.backends"]
jrrle_engine = "ggcmpy.jrrle_backend:JrrleEntrypoint"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.coverage]
run.source = ["xarray_adios2"]
report.exclude_also = ['\.\.\.', 'if typing.TYPE_CHECKING:']

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "xarray_adios2.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "ISC001",  # Conflicts with formatter
  "UP031",   # Use format specifiers instead of percent format
  "G002",    # Logging statement uses `%`

]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["xarray_adios2._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.uv]
reinstall-package = ["ggcmpy"]
